# pycograd

./: .gitignore  CLAUDE.md  MANIFEST.in  Makefile  README.md  ROADMAP.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
docs/: HISTORY.rst  LICENSE.txt
notebooks/: pycograd_batching_demo.ipynb  pycograd_batching_manual_example.ipynb  pycograd_compile_jax_demo.ipynb  pycograd_compile_mps_demo.ipynb  pycograd_compile_tf_demo.ipynb  pycograd_compile_torch_demo.ipynb  pycograd_demo.ipynb  pycograd_device_placement_demo.ipynb  pycograd_einops_demo.ipynb  pycograd_embedding_demo.ipynb  pycograd_graph_viz_demo.ipynb  pycograd_remat_demo.ipynb  pycograd_rnn_demo.ipynb  pycograd_rwkv_demo.ipynb  pycograd_simple_example.ipynb  pycograd_vmap_demo.ipynb
pycograd/: __init__.py  _constraints.py  _dims.py  _typing.py  _version.py  ad_graph.py  batching.py  capture.py  checkpoint.py  compile.py  cost.py  data.py  dtypes.py  einops_backend.py  export.py  extension.py  forward.py  functional.py  ops.py  optimizers.py  params.py  passes.py  random.py  remat.py  shapes.py  tensor.py  trace.py  tracer.py  training.py  transforms.py  transpose.py  tree.py  version.py
pycograd/backends/: __init__.py  abstract_backend.py  batching_backend.py  cupy_backend.py  jax_backend.py  mps_backend.py  numpy_backend.py  tf_backend.py  torch_backend.py
pycograd/examples/: __init__.py  __main__.py  models.py  training.py
scripts/: blacken.sh  bump-version.py
test/: test_ad_graph.py  test_arith_reduce_ops.py  test_array_of_boxes.py  test_autodiff.py  test_autograd_api.py  test_backend_seam.py  test_backward_differentiable.py  test_capture.py  test_checkpoint.py  test_compile.py  test_complex.py  test_constraints.py  test_contraction_ops.py  test_cost.py  test_device_placement.py  test_dims.py  test_dtypes.py  test_einops.py  test_einsum.py  test_einsum_interleaved.py  test_embedding.py  test_flip_trace_ops.py  test_functional.py  test_fused.py  test_gather_ops.py  test_highorder.py  test_index_expr.py  test_ipython_extension.py  test_jvp.py  test_list_reductions.py  test_manip_ops.py  test_misc_ops.py  test_more_ops.py  test_mps.py  test_nn_ops.py  test_optimizers.py  test_random.py  test_remat.py  test_shapes.py  test_split_ops.py  (+3 more)
test/autograd_suite/: README.md  REPORT.md  _compat.py  _pytree.py  _skips.py  _test_util.py  conftest.py  numpy_utils.py  test_binary_ops.py  test_builtins.py  test_complex.py  test_core.py  test_dict.py  test_fft.py  test_graphs.py  test_jacobian.py  test_linalg.py  test_list.py  test_logic.py  test_misc.py  test_numpy.py  test_performance.py  test_scalar_ops.py  test_scipy.py  test_systematic.py  test_tests.py  test_truediv.py  test_tuple.py  test_ufunc_dispatch.py  test_vspaces.py  test_wrappers.py
