[build-system]
requires = [
    "setuptools >= 48",
    "wheel >= 0.30.0",
    "setuptools-git-versioning",
]
build-backend = 'setuptools.build_meta'

[tool.setuptools-git-versioning]
enabled = true

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = 'black'

[tool.pytest.ini_options]
filterwarnings = [
    'ignore::DeprecationWarning',
    'ignore::pytest.PytestAssertRewriteWarning',
]

[tool.coverage.run]
source = ['pycograd']
omit = ['pycograd/version.py']

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover *$',
    '^ *if TYPE_CHECKING:',
    '^ *except Exception',
    '^ *raise',
    '^ *\.\.\.',
]
