[metadata]
name = pycograd
description = A small, readable reverse-mode autograd library built on numpy and pyccolo
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/smacke/pycograd
author = Stephen Macke
author_email = stephen.macke@gmail.com
license = BSD-3-Clause
license_files = docs/LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14

[options]
zip_safe = False
packages = find:
platforms = any
python_requires = >= 3.9
install_requires =
    numpy
    pyccolo >= 0.0.86

[options.packages.find]
exclude =
    test
    test.*

[options.extras_require]
test =
    black < 24
    ipython
    isort
    mypy
    pytest
    pytest-cov
    ruff
    %(pipescript)s
pipescript =
    pipescript
notebook =
    %(pipescript)s
dev =
    build
    pycln
    twine
    setuptools-git-versioning
    %(test)s

[mypy]
ignore_missing_imports = True
