[metadata]
name = pycograd
description = A small, readable reverse-mode autograd library built on numpy and pyccolo
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/smacke/pycograd
author = Stephen Macke
author_email = stephen.macke@gmail.com
license = BSD-3-Clause
license_files = docs/LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14

[options]
zip_safe = False
packages = find:
platforms = any
python_requires = >= 3.10
install_requires =
    # Provides the numpy-compatible bfloat16 dtype (the dtype JAX uses) for the
    # ``dtype("bfloat16")`` working-precision seam.
    ml_dtypes
    numpy
    pipescript >= 0.0.22
    pyccolo >= 0.0.87

[options.packages.find]
exclude =
    test
    test.*

[options.extras_require]
test =
    black < 24
    ipython
    isort
    mypy
    pytest
    pytest-cov
    ruff
jax =
    jax
torch =
    torch
tf =
    tensorflow
cupy =
    # Install the wheel matching your CUDA toolkit instead, e.g. cupy-cuda12x.
    cupy
onnx =
    %(torch)s
    onnx
    onnxruntime
dev =
    build
    pycln
    twine
    setuptools-git-versioning
    %(test)s

[mypy]
ignore_missing_imports = True

# The compile backends are deliberately dynamic glue: they bridge pycograd's
# ``object``-typed operands to an optional framework's API. Treat the frameworks as
# Any (rather than resolving their installed stubs) so that glue typechecks as the
# duck-typed code it is.
[mypy-torch.*]
follow_imports = skip
follow_imports_for_stubs = True

[mypy-jax.*]
follow_imports = skip
follow_imports_for_stubs = True

[mypy-tensorflow.*]
follow_imports = skip
follow_imports_for_stubs = True
