# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'python versioneer.py setup' after changing this section, and
# commit the resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = pipescript/_version.py
versionfile_build = pipescript/_version.py
tag_prefix =
parentdir_prefix = pipescript-

[metadata]
name = pycograd
description = A small, readable reverse-mode autograd library built on numpy and pyccolo
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/smacke/pycograd
author = Stephen Macke
author_email = stephen.macke@gmail.com
license = BSD-3-Clause
license_files = docs/LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14

[options]
zip_safe = False
packages = find:
platforms = any
python_requires = >= 3.10
install_requires =
    # Provides the numpy-compatible bfloat16 dtype (the dtype JAX uses) for the
    # ``dtype("bfloat16")`` working-precision seam.
    ml_dtypes
    numpy
    pipescript >= 0.0.24
    pyccolo >= 0.0.89

[options.packages.find]
exclude =
    test
    test.*

[options.extras_require]
test =
    black < 24
    einops
    ipython
    isort
    mypy
    pytest
    pytest-cov
    ruff
einops =
    einops
jax =
    jax
torch =
    torch
tf =
    tensorflow
cupy =
    # Install the wheel matching your CUDA toolkit instead, e.g. cupy-cuda12x.
    cupy
onnx =
    %(torch)s
    onnx
    onnxruntime
dev =
    build
    pycln
    twine
    setuptools-git-versioning
    versioneer
    %(test)s

[mypy]
ignore_missing_imports = True

# The compile backends are deliberately dynamic glue: they bridge pycograd's
# ``object``-typed operands to an optional framework's API. Treat the frameworks as
# Any (rather than resolving their installed stubs) so that glue typechecks as the
# duck-typed code it is.
[mypy-torch.*]
follow_imports = skip
follow_imports_for_stubs = True

[mypy-jax.*]
follow_imports = skip
follow_imports_for_stubs = True

[mypy-tensorflow.*]
follow_imports = skip
follow_imports_for_stubs = True
# Use a path-based (.pth) editable install instead of setuptools' default
# import-hook editable mode, which mypy cannot follow statically -- it would
# treat this package as untyped and hide type errors that only surface in CI.
# (pyproject's [tool.distutils.editable_wheel] is ignored for setup.cfg-based
# projects, so the option lives here.) Honored by any frontend: pip, uv, etc.
[editable_wheel]
mode = compat
